<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/app_background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/splash_logo"
        android:cropToPadding="false"
        android:scaleType="fitXY" />

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/login"
                android:textColor="@color/navyBlueDark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTxt_Email"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_design"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/editTxt_Password"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_design"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/input_design2"
                android:text="@string/login"
                android:textColor="@color/White"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="282dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_design2"
                android:text="@string/register"
                android:textColor="@color/White"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="282dp" />

            <TextView
                android:id="@+id/txt_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/Forgot_password" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/txt_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="EN"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/txt_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="FR"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>