<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FourthFragment"
    android:background="@drawable/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">
        <androidx.cardview.widget.CardView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="25dp"
            android:backgroundTint="@color/babyBlue"
            android:elevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_edit_fourth_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_baseline_mode_edit_24"/>
                <!-- TODO: Update blank fragment layout -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/firstname"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTxt_Renter_FN"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:background="@drawable/input_design"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:inputType="none"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/secondname"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTxt_Renter_LN"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:background="@drawable/input_design"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:inputType="none"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/emailaddress"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTxt_Renter_email"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:background="@drawable/input_design"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:inputType="none"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTxt_Renter_phone"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:background="@drawable/input_design"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:inputType="none"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />

                <TextView
                    android:id="@+id/txtView_Renter_Change_Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/changepassword"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtView_Renter_Logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/logoutofrentalapp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_update_fourth_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Update"
                    android:visibility="invisible"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</ScrollView>