<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/design_bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/babyBlue"
            app:cardCornerRadius="8dp"
            android:elevation="8dp"
            android:layout_margin="4dp">


                <LinearLayout
                    android:id="@+id/linear_layout_bottomsheet1"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar_price_condition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_design"
                            app:menu="@menu/price">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:textSize="18sp"
                                    android:text="@string/price"/>
                        </androidx.appcompat.widget.Toolbar>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_set_limit"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:background="@drawable/input_design"
                            android:text="@string/setlimit"/>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_view_set_limit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:visibility="invisible"
                            app:cardCornerRadius="20dp">
                                <EditText
                                    android:id="@+id/edt_setlimit0"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="10dp"
                                    android:layout_marginTop="8dp"
                                    android:paddingRight="10dp"
                                    android:background="@drawable/input_design3"
                                    android:text="0"/>
                                <EditText
                                    android:id="@+id/edt_setlimit3000"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="10dp"
                                    android:background="@drawable/input_design3"
                                    android:text="3000"
                                    android:layout_marginLeft="40dp"/>
                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btn_set"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:paddingRight="10dp"
                                    android:text=">"
                                    android:background="@drawable/input_design"
                                    android:layout_marginLeft="100dp"/>

                        </androidx.cardview.widget.CardView>
                </LinearLayout>


                <SearchView
                    android:id="@+id/search_view_home_bottom_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:queryHint="@string/searchbylocation"
                    android:iconifiedByDefault="false"
                    android:layout_margin="10dp"
                    android:elevation="5dp"
                    android:background="@drawable/input_design"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="150dp"
                    android:id="@+id/recyclerViewBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />


        </androidx.cardview.widget.CardView>

</LinearLayout>